# Barchart

./: README.md  author.md
barchart-datasets/: README.md
source/: CMakeLists.txt  barchart.cpp  barchart.h  bcr_am.cpp  bcr_am.h
students/: 0Main.cpp  1BCR.h  1a_BCR.cpp  1b_BCR.h  2Database.h  2a_Database.cpp  2b_Database.h  3Barchart.h  3a_Barchart.cpp  3b_Barchart.h  4Bar.h  4a_Bar.cpp  4b_Bar.h  5a_Tokenizer.cpp  5b_Tokenizer.h  CMakeLists.txt  teste  text_color.h
